[+] ci with allure and checkstyle
* [!] fix class name typo

* [!] decreased artefacts retentions time to one day